--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/SE_Temp/TexasHoldEm/ocsf.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
