--- a/ClientUserInterface/.gitignore
+++ b/ClientUserInterface/.gitignore
@@ -1,1 +1,9 @@
 /InitialPanel.class
+/GamePanel.class
+/GameControl.class
+/ClientGUI.class
+/InitialControl.class
+/LoginPanel.class
+/LoginControl.class
+/CreateAccountPanel.class
+/CreateAccountControl.class
